# LMQA

./: .gitignore  README.md  前后端技术方案分析.md  功能实现状态.md
backend/: .env-example  README.md  cleanup_qdrant.py  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_reranker.py
backend/app/: __init__.py
backend/app/api/: auth.py  chat.py  memories.py  models.py
backend/app/core/: auth_utils.py  config.py  db.py  utils.py
backend/app/services/: agent_service.py
backend/demo/: interactive_chat.py  memory_agent.py
backend/memory/: README.md  config.py  manager.py  routes.py
backend/tests/: test_real_crud.py
evaluation/: .gitignore  README.md  config.yaml  data_loader.py  evaluator.py  metrics.py  requirements.txt  run_eval_example.py  run_evaluation.py
evaluation/scripts/: download_data.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  utils.ts
frontend/src/components/: HighlightText.tsx  MessageContent.css  MessageContent.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: Auth.css  ChatPage.css  ChatPage.tsx  Login.tsx  MainLayout.css  MainLayout.tsx  MemoryPage.css  MemoryPage.tsx  ProfilePage.css  ProfilePage.tsx  Register.tsx
